# kedahttp

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  go.mod  go.sum  keda-improvements.md  kedascaler.external.proto  main.go  oss-improvements.md  proxy-internal-gen.yaml  proxy.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: 4-action-acr-aci.yml
admin/: Cargo.toml
azure/: DEPLOY.sh  README.md
charts/cscaler-proxy/: Chart.yaml  values.yaml
charts/cscaler-proxy/templates/: NOTES.txt  dummy-app-service.yaml  dummy-deployment.yaml  keda-components.yaml  proxy-admin-ingress.yaml  proxy-admin-service.yaml  proxy-deployment.yaml  proxy-grpc-service.yaml  proxy-http-ingress.yaml  proxy-http-service.yaml  proxy-role-binding.yaml  proxy-role.yaml  proxy-service.yaml  proxy-svc-account.yaml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: client.rs  mod.rs  rm.rs  run.rs
cmd/cli/: main.go
cmd/controller/: main.go
cmd/proxy/: admin_handlers.go  chan_mgr.go  deployment.go  dispatcher.go  error.go  grpc_impl.go  handlers.go  listener.go  main.go  middleware.go  req_counter.go  service.go
controller/: Cargo.toml  Dockerfile
controller/src/: main.rs
docs/: AUTOSCALING.md  COMPONENTS.md  REQUEST_LIFECYCLE.md
externalscaler/: impl.go  kedascaler.external.pb.go  kedascaler.external_grpc.pb.go
pkg/k8s/: client.go  deployment.go  ingress.go  scaledobject.go  service.go
pkg/srv/: config.go
scripts/: install.sh
scripts/_helpers/: functions.sh  logo.txt
(+4 files in other folders)
