[package]
name = "controller"
version = "0.1.0"
authors = ["Aaron Schlesinger <aaron@ecomaz.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = "0.31.0" 
k8s-openapi = { version = "0.9", default-features = false, features = ["v1_18"] }
